feat: problem6 - 중복된 닉네임인지 확인하는 기능 구현