@@ -1,10 +1,16 @@
 package onboarding;
 
-import java.util.List;
+import java.util.*;
 
 public class Problem6 {
+
     public static List<String> solution(List<List<String>> forms) {
-        List<String> answer = List.of("answer");
+        List<String> answer=Collections.emptyList();
+
         return answer;
+    }
+
+    private static boolean isDuplicatedName(String userEmailWithDuplicatedName, String email){
+        return (!userEmailWithDuplicatedName.isBlank()) && (!userEmailWithDuplicatedName.equals(email));
     }
 }
